Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
       box-shadow: 0 12px 30px rgba(0,0,0,0.35);
     }
+    header <a href="/">
+             <img src="images/skill-suggest-logo.png"
+                  alt="Skill Suggest Logo"
+                  class="logo">
+           </a>
     header{ display:flex; justify-content:space-between; align-items:center; padding:16px 20px; border-bottom:1px solid rgba(255,255,255,0.04) }
     header h1{ margin:0; font-size:18px }
     header p{ margin:0; color:var(--muted); font-size:13px }
@@ -61,6 +66,11 @@
   height: 260px !important;
   max-height: 260px !important;
 }
+    .logo {
+      height: 50px;
+      width: auto;
+      cursor: pointer;
+    } 
                                           
   </style>
 </head>
@@ -495,4 +505,5 @@
   </script>
 </body>
 </html>
+
 
